Created views for main menu, adlist and new ad

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AdListActivity"
+            android:label="@string/title_activity_ad_list"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.greidan.greidan.greidan.MainActivity" />
+        </activity>
+        <activity
+            android:name=".NewAdActivity"
+            android:label="@string/title_activity_new_ad"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.greidan.greidan.greidan.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
