Added an AdManager, Ad class, app can post an ad to the server, probably something more...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.greidan.greidan.greidan.LoginActivity" />
         </activity>
+        <activity android:name=".AdViewActivity"></activity>
     </application>
 
 </manifest>
