--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -55,8 +56,10 @@
         <activity android:name=".activity.AdViewActivity" />
         <activity
             android:name=".activity.UserProfileActivity"
-            android:label="@string/title_activity_user_profile">
-        </activity>
+            android:label="Profile"></activity>
+        <activity
+            android:name=".activity.EditUserProfileActivity"
+            android:label="Edit profile"></activity>
     </application>
 
 </manifest>
