Added a MessageView Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,8 @@
             android:label="New review" />
         <activity
             android:name=".activity.UserAdListActivity"
-            android:label="User ads"></activity>
+            android:label="User ads" />
+        <activity android:name=".activity.MessageViewActivity"></activity>
     </application>
 
 </manifest>
